remove overflow hidden to fix the sticky navbar problem

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x:hidden;
 }
 body {
     background-color: #191919;
@@ -13,6 +12,8 @@ body {
     border-bottom-left-radius: 100px;
     border-bottom-right-radius: 100px;
     padding-bottom: 5%;
+    position: relative;
+    z-index: 0;
 }
 
 /*black header*/
@@ -46,8 +47,10 @@ body {
     align-items: center;
     background-color:  rgba(255, 255, 255, 0.992);
     position: sticky;
+    position: -webkit-sticky; /* For Safari */
     top: 0;
-    z-index: 1000;
+    left: 0;
+    z-index:10;
 }
 #typeform{
     margin-left: 7px;
